Posts endpoints upgrade and unit tests
