# src/routes/routes.js
@@ -1,7 +1,7 @@
 const { Router } = require('express')
 const { register, login, verifyUserRegistration, forgotPassword, validateResetPasswordToken, setNewPassword, deactivateAccount, activateAccount } = require('../controller/auth.controller')
 const { fetchUserById, updateUser, deleteUser, fetchAllUsers } = require('../controller/user.controller')
-const { createNewPost, getAllPosts, getPostById, getUserPosts, updatePost, deletePost } = require('../controller/post.controller')
+const { createNewPost, getAllPosts, getPostById, getUserPosts, updatePost, deletePost, fetchAllPostAndTheirAuthors } = require('../controller/post.controller')
 
 
 const router = Router()
@@ -20,11 +20,12 @@ router.put("/user/:id", updateUser)
 router.delete("/user/:id", deleteUser)
 router.get("/user/:id", fetchUserById)
 
-router.get('/posts', getAllPosts)
-router.put('/post/:userId/:id', updatePost)
+// router.get('/posts', getAllPosts)
 router.get('/post/:id', getPostById)
 router.delete('/post/:id', deletePost)
 router.post('/post/:id', createNewPost)
 router.get('/user/post/:id', getUserPosts)
+router.put('/post/:userId/:id', updatePost)
+router.get('/posts', fetchAllPostAndTheirAuthors)
 
 module.exports = router
